Add day3 solutions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,6 @@ jobs:
 
       - name: Run day2 solutions
         run: emacs --script day2.elc
+
+      - name: Run day3 solutions
+        run: emacs --script day3.elc
