Add day4 solutions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,6 @@ jobs:
 
       - name: Run day3 solutions
         run: emacs --script day3.elc
+
+      - name: Run day4 solutions
+        run: emacs --script day4.elc
