Add day7 solutions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,3 +38,6 @@ jobs:
 
       - name: Run day6 solutions
         run: emacs --script day6.elc
+
+      - name: Run day7 solutions
+        run: emacs --script day7.elc
