Add day8 solutions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,6 @@ jobs:
 
       - name: Run day7 solutions
         run: emacs --script day7.elc
+
+      - name: Run day8 solutions
+        run: emacs --script day8.elc
