Add day9 solutions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,6 @@ jobs:
 
       - name: Run day8 solutions
         run: emacs --script day8.elc
+
+      - name: Run day9 solutions
+        run: emacs --script day9.elc
