Add day15 solutions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,3 +62,6 @@ jobs:
 
       - name: Run day14 solutions
         run: emacs --script day14.elc
+
+      - name: Run day15 solutions
+        run: emacs --script day15.elc
