--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,3 +65,17 @@ jobs:
 
       - name: Run day15 solutions
         run: emacs --script day15.elc
+
+      - name: Setup Haskell
+        uses: haskell/actions/setup@v1
+        with:
+          enable-stack: true
+          ghc-version: '8.8.4'
+          stack-version: '2.5.1'
+
+      - name: Run day18 solutions
+        run: |
+          cd day18
+          stack setup
+          stack build
+          stack exec day18-exe
