Add day25 solutions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,3 +84,9 @@ jobs:
           cd day19
           stack build
           stack exec day19-exe
+
+      - name: Run day25 solutions
+        run: |
+          cd day25
+          stack build
+          stack exec day25-exe
